--- a/src/app/trust/add-exam-certificate/add-exam-certificate.component.html
+++ b/src/app/trust/add-exam-certificate/add-exam-certificate.component.html
@@ -3,11 +3,11 @@
     <div class="">
       <div class="card-body">
         <div class="form-group mb-3">
-          <label for="simpleinput"><b>Certificate date</b></label>
+          <h4 class="header-title">Certificate Date *</h4>
           <input
             type="date"
             class="form-control"
-            placeholder=""
+            placeholder="Enter Certificate Date"
             formControlName="date"
             [ngClass]="{
               'is-invalid': submitted && f.date.errors
@@ -20,11 +20,11 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="simpleinput"><b>Year</b></label>
+          <h4 class="header-title">Year *</h4>
           <input
             type="text"
             class="form-control"
-            placeholder=""
+            placeholder="Enter Year"
             formControlName="year"
             [ngClass]="{
               'is-invalid': submitted && f.year.errors
@@ -35,11 +35,11 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="simpleinput"><b>Next Renewal Date</b></label>
+          <h4 class="header-title">Next Renewal Date *</h4>
           <input
             type="date"
             class="form-control"
-            placeholder=""
+            placeholder="Enter Next Renewal Date"
             formControlName="renewaldate"
             [ngClass]="{
               'is-invalid': submitted && f.renewaldate.errors
