--- a/src/app/trust/addreturn/addreturn.component.html
+++ b/src/app/trust/addreturn/addreturn.component.html
@@ -3,11 +3,12 @@
     <div class="">
       <div class="card-body">
         <div class="form-group mb-3">
-          <label for="simpleinput"><b>Lawyer</b></label>
+          <h4 class="header-title">Lawyer *</h4>
           <input
             type="text"
             class="form-control"
             formControlName="lawyer"
+            placeholder="Enter Lawyer"
             [ngClass]="{
               'is-invalid': submitted && f.lawyer.errors
             }"
@@ -17,11 +18,12 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="simpleinput"><b>Year</b></label>
+          <h4 class="header-title">Year *</h4>
           <input
             type="text"
             class="form-control"
             formControlName="year"
+            placeholder="Enter Year"
             [ngClass]="{
               'is-invalid': submitted && f.year.errors
             }"
@@ -31,11 +33,12 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="simpleinput"><b>Amount</b></label>
+          <h4 class="header-title">Amount *</h4>
           <input
             type="text"
             class="form-control"
             formControlName="amount"
+            placeholder="Enter Amount"
             [ngClass]="{
               'is-invalid': submitted && f.amount.errors
             }"
@@ -48,11 +51,12 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="simpleinput"><b>Return file Date</b></label>
+          <h4 class="header-title">Return file Date *</h4>
           <input
             type="date"
             class="form-control"
             formControlName="date"
+            placeholder="Enter Return file Date"
             [ngClass]="{
               'is-invalid': submitted && f.date.errors
             }"
@@ -64,11 +68,12 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="simpleinput"><b>Return</b></label>
+          <h4 class="header-title">Return *</h4>
           <input
             type="text"
             class="form-control"
             formControlName="return"
+            placeholder="Enter Return"
             [ngClass]="{
               'is-invalid': submitted && f.return.errors
             }"
@@ -78,11 +83,12 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <label for="simpleinput"><b>Order</b></label>
+          <h4 class="header-title">Order *</h4>
           <input
             type="text"
             class="form-control"
             formControlName="order"
+            placeholder="Enter Order"
             [ngClass]="{
               'is-invalid': submitted && f.order.errors
             }"
