--- a/src/app/trust/single-trust-view/single-trust-view.component.html
+++ b/src/app/trust/single-trust-view/single-trust-view.component.html
@@ -39,9 +39,17 @@
         <ng-template ngbTabContent class="nav-item">
           <div class="row">
             <div class="col-md-8">
-              <app-view-fund [trustID]="trustID"></app-view-fund>
+              <app-view-fund
+                [trustID]="trustID"
+                [refresh]="fund"
+              ></app-view-fund>
             </div>
-            <div class="col-md-4"><app-addfund></app-addfund></div>
+            <div class="col-md-4">
+              <app-addfund
+                [trustID]="trustID"
+                (reFresh)="refreshfund()"
+              ></app-addfund>
+            </div>
           </div>
         </ng-template>
       </ngb-tab>
