meet patel Audit Api 07/04/21

--- a/src/app/legal-case/view-legal-case/view-legal-case.component.html
+++ b/src/app/legal-case/view-legal-case/view-legal-case.component.html
@@ -31,6 +31,7 @@
     *ngIf="item.isloaded"
     [CaseID]="item.LegalCaseID"
     [status]="item.Status"
+    (refresh)="ngOnInit()"
   ></app-details-legal-case>
 </app-custom-partlet>
 <div class="card-disabled" *ngIf="isloading">
