--- a/src/app/trust/addaudit/addaudit.component.html
+++ b/src/app/trust/addaudit/addaudit.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="auditForm" (ngSubmit)="onAdd()">
+<form class="form-row" [formGroup]="auditForm" (ngSubmit)="onSubmit()">
   <div class="col-12">
     <div class="">
       <div class="card-body">
@@ -8,14 +8,14 @@
             type="text"
             class="form-control"
             placeholder="Enter Year"
-            formControlName="year"
+            formControlName="FinYear"
             [ngClass]="{
-              'is-invalid': submitted && f.year.errors
+              'is-invalid': submitted && f.FinYear.errors
             }"
           />
-          <div *ngIf="submitted && f.year.errors" class="invalid-feedback">
-            <div *ngIf="f.year.errors.required">Year is Required</div>
-            <div *ngIf="f.year.errors.pattern">
+          <div *ngIf="submitted && f.FinYear.errors" class="invalid-feedback">
+            <div *ngIf="f.FinYear.errors.required">Year is Required</div>
+            <div *ngIf="f.FinYear.errors.pattern">
               Year Must be Valid And Only Alphanumeric Allowed
             </div>
           </div>
@@ -26,19 +26,21 @@
             type="date"
             class="form-control"
             placeholder="Enter Audit Date"
-            formControlName="date"
+            formControlName="AuditDate"
             [ngClass]="{
-              'is-invalid': submitted && f.date.errors
+              'is-invalid': submitted && f.AuditDate.errors
             }"
           />
-          <div *ngIf="submitted && f.date.errors" class="invalid-feedback">
-            <div *ngIf="f.date.errors.required">Audit Date is Required</div>
-            <div *ngIf="f.date.errors.pattern">
+          <div *ngIf="submitted && f.AuditDate.errors" class="invalid-feedback">
+            <div *ngIf="f.AuditDate.errors.required">
+              Audit Date is Required
+            </div>
+            <div *ngIf="f.AuditDate.errors.pattern">
               Audit Date Must be Valid And Only Alphanumeric Allowed
             </div>
           </div>
         </div>
-        <div class="form-group mb-3">
+        <!-- <div class="form-group mb-3">
           <h4 class="header-title">Name *</h4>
           <input
             type="text"
@@ -93,6 +95,80 @@
             >
               Mobile Must be 10 Digit Only
             </span>
+          </div>
+        </div> -->
+        <div class="form-group mb-3">
+          <h4 class="header-title">Agenda Document Upload *</h4>
+          <p class="text-muted font-13 m-b-30"></p>
+          <!-- file upload -->
+          <file-upload
+            class="dropzone"
+            multiple="false"
+            isAnimationDisabled="true"
+            listVisible="true"
+            zoomText="zoomOut"
+            #Files
+            accept="image/gif,image/png,image/jpeg,application/pdf"
+            type="file"
+            maxsize="20mb"
+            (ngModelChange)="onchange($event)"
+            [ngClass]="{
+              'is-invalid': submitted && f.uploadfile.errors
+            }"
+            formControlName="uploadfile"
+          ></file-upload>
+          <div
+            *ngIf="submitted && f.uploadfile.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="f.uploadfile.errors.sizeRange">
+              File size is exceed 20 Mb Limit
+            </div>
+            <div *ngIf="f.uploadfile.errors.required">Please Add file</div>
+          </div>
+        </div>
+
+        <div class="form-group mb-3">
+          <h4 class="header-title">File Name *</h4>
+          <input
+            class="form-control"
+            id="example-input"
+            placeholder="Enter File Name"
+            formControlName="FileName"
+            maxlength="25"
+            [ngClass]="{
+              'is-invalid': submitted && f.FileName.errors
+            }"
+          />
+          <div *ngIf="submitted && f.FileName.errors" class="invalid-feedback">
+            <div *ngIf="f.FileName.errors.required">File Name is Required</div>
+            <div *ngIf="f.FileName.errors.pattern">
+              Only alphanumeric characters allowed
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group mb-3">
+          <h4 class="header-title">File Description *</h4>
+
+          <textarea
+            class="form-control"
+            id="example-textarea"
+            rows="3"
+            placeholder="Enter File Description"
+            formControlName="Description"
+            maxlength="55"
+            [ngClass]="{
+              'is-invalid': submitted && f.Description.errors
+            }"
+          ></textarea>
+          <div
+            *ngIf="submitted && f.Description.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="f.Description.errors.required">
+              File Description is Required
+            </div>
           </div>
         </div>
         <!-- <form
