--- a/src/app/trust/addmeeting/addmeeting.component.html
+++ b/src/app/trust/addmeeting/addmeeting.component.html
@@ -52,7 +52,8 @@
             type="text"
             class="form-control"
             placeholder="Venue"
-            formControlName="Enter Venue"
+            formControlName="venue"
+            placeholder="Enter Venue"
             [ngClass]="{
               'is-invalid': submitted && f.venue.errors
             }"
