--- a/src/app/trust/single-trust-view/single-trust-view.component.html
+++ b/src/app/trust/single-trust-view/single-trust-view.component.html
@@ -57,9 +57,17 @@
         <ng-template ngbTabContent class="nav-item">
           <div class="row">
             <div class="col-md-8">
-              <app-view-audit [trustID]="trustID"></app-view-audit>
+              <app-view-audit
+                [trustID]="trustID"
+                [refresh]="Audit"
+              ></app-view-audit>
             </div>
-            <div class="col-md-4"><app-addaudit></app-addaudit></div>
+            <div class="col-md-4">
+              <app-addaudit
+                [trustID]="trustID"
+                (reFresh)="refreshAudit()"
+              ></app-addaudit>
+            </div>
           </div>
         </ng-template>
       </ngb-tab>
