meetpatel 07/04/21 exam certi..... Api Merge

--- a/src/app/trust/addfund/addfund.component.html
+++ b/src/app/trust/addfund/addfund.component.html
@@ -88,7 +88,7 @@
           </div>
         </div>
         <div class="form-group mb-3">
-          <h4 class="header-title">Agenda Document Upload *</h4>
+          <h4 class="header-title">Document Upload *</h4>
           <p class="text-muted font-13 m-b-30"></p>
           <!-- file upload -->
           <file-upload
