--- a/src/app/trust/add-exam-certificate/add-exam-certificate.component.html
+++ b/src/app/trust/add-exam-certificate/add-exam-certificate.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="certificateForm" (ngSubmit)="onAdd()">
+<form class="form-row" [formGroup]="certificateForm" (ngSubmit)="onSubmit()">
   <div class="col-12">
     <div class="">
       <div class="card-body">
@@ -8,14 +8,17 @@
             type="date"
             class="form-control"
             placeholder="Enter Certificate Date"
-            formControlName="date"
+            formControlName="DateofCertificate"
             [ngClass]="{
-              'is-invalid': submitted && f.date.errors
+              'is-invalid': submitted && f.DateofCertificate.errors
             }"
           />
-          <div *ngIf="submitted && f.date.errors" class="invalid-feedback">
-            <div *ngIf="f.date.errors.required">
-              Certificate date is Required
+          <div
+            *ngIf="submitted && f.DateofCertificate.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="f.DateofCertificate.errors.required">
+              Certificate Date is Required
             </div>
           </div>
         </div>
@@ -25,13 +28,13 @@
             type="text"
             class="form-control"
             placeholder="Enter Year"
-            formControlName="year"
+            formControlName="FinYear"
             [ngClass]="{
-              'is-invalid': submitted && f.year.errors
+              'is-invalid': submitted && f.FinYear.errors
             }"
           />
-          <div *ngIf="submitted && f.year.errors" class="invalid-feedback">
-            <div *ngIf="f.year.errors.required">Year is Required</div>
+          <div *ngIf="submitted && f.FinYear.errors" class="invalid-feedback">
+            <div *ngIf="f.FinYear.errors.required">Year is Required</div>
           </div>
         </div>
         <div class="form-group mb-3">
@@ -40,17 +43,91 @@
             type="date"
             class="form-control"
             placeholder="Enter Next Renewal Date"
-            formControlName="renewaldate"
+            formControlName="NextRenewalDate"
             [ngClass]="{
-              'is-invalid': submitted && f.renewaldate.errors
+              'is-invalid': submitted && f.NextRenewalDate.errors
             }"
           />
           <div
-            *ngIf="submitted && f.renewaldate.errors"
+            *ngIf="submitted && f.NextRenewalDate.errors"
             class="invalid-feedback"
           >
-            <div *ngIf="f.renewaldate.errors.required">
+            <div *ngIf="f.NextRenewalDate.errors.required">
               Next Renewal is Required
+            </div>
+          </div>
+        </div>
+        <div class="form-group mb-3">
+          <h4 class="header-title">Document Upload *</h4>
+          <p class="text-muted font-13 m-b-30"></p>
+          <!-- file upload -->
+          <file-upload
+            class="dropzone"
+            multiple="false"
+            isAnimationDisabled="true"
+            listVisible="true"
+            zoomText="zoomOut"
+            #Files
+            accept="image/gif,image/png,image/jpeg,application/pdf"
+            type="file"
+            maxsize="20mb"
+            (ngModelChange)="onchange($event)"
+            [ngClass]="{
+              'is-invalid': submitted && f.uploadfile.errors
+            }"
+            formControlName="uploadfile"
+          ></file-upload>
+          <div
+            *ngIf="submitted && f.uploadfile.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="f.uploadfile.errors.sizeRange">
+              File size is exceed 20 Mb Limit
+            </div>
+            <div *ngIf="f.uploadfile.errors.required">Please Add file</div>
+          </div>
+        </div>
+
+        <div class="form-group mb-3">
+          <h4 class="header-title">File Name *</h4>
+          <input
+            class="form-control"
+            id="example-input"
+            placeholder="Enter File Name"
+            formControlName="FileName"
+            maxlength="25"
+            [ngClass]="{
+              'is-invalid': submitted && f.FileName.errors
+            }"
+          />
+          <div *ngIf="submitted && f.FileName.errors" class="invalid-feedback">
+            <div *ngIf="f.FileName.errors.required">File Name is Required</div>
+            <div *ngIf="f.FileName.errors.pattern">
+              Only alphanumeric characters allowed
+            </div>
+          </div>
+        </div>
+
+        <div class="form-group mb-3">
+          <h4 class="header-title">File Description *</h4>
+
+          <textarea
+            class="form-control"
+            id="example-textarea"
+            rows="3"
+            placeholder="Enter File Description"
+            formControlName="Description"
+            maxlength="55"
+            [ngClass]="{
+              'is-invalid': submitted && f.Description.errors
+            }"
+          ></textarea>
+          <div
+            *ngIf="submitted && f.Description.errors"
+            class="invalid-feedback"
+          >
+            <div *ngIf="f.Description.errors.required">
+              File Description is Required
             </div>
           </div>
         </div>
@@ -90,3 +167,6 @@
     </div>
   </div>
 </form>
+<div class="card-disabled" *ngIf="isLoading">
+  <div class="card-portlets-loader"></div>
+</div>
