--- a/src/app/trust/addaudit/addaudit.component.html
+++ b/src/app/trust/addaudit/addaudit.component.html
@@ -98,7 +98,7 @@
           </div>
         </div> -->
         <div class="form-group mb-3">
-          <h4 class="header-title">Agenda Document Upload *</h4>
+          <h4 class="header-title">Document Upload *</h4>
           <p class="text-muted font-13 m-b-30"></p>
           <!-- file upload -->
           <file-upload
@@ -206,3 +206,6 @@
     </div>
   </div>
 </form>
+<div class="card-disabled" *ngIf="isLoading">
+  <div class="card-portlets-loader"></div>
+</div>
