--- a/src/app/photograph/view-photograph/view-photograph.component.html
+++ b/src/app/photograph/view-photograph/view-photograph.component.html
@@ -16,6 +16,7 @@
                 <div class="row">
                   <div class="col-lg-8">
                     <app-details-photograph
+                      [reFresh]="count"
                       propertyId="{{ propertyID }}"
                     ></app-details-photograph>
                   </div>
@@ -24,6 +25,7 @@
                     <div class="">
                       <div class="card-body">
                         <app-add-photograph
+                          (refresh)="refresh()"
                           propertyId="{{ propertyID }}"
                         ></app-add-photograph>
                       </div>
