--- a/src/app/tax/view-tax/view-tax.component.html
+++ b/src/app/tax/view-tax/view-tax.component.html
@@ -10,3 +10,174 @@
     <div class="card-portlets-loader"></div>
   </div>
 </div>
+<ng-template #DemandForm let-modal="close">
+  <div class="modal-header">
+    <h4 class="modal-title">Add Demand Notice</h4>
+    <button
+      type="button"
+      class="close"
+      (click)="modal('Cross click')"
+      aria-hidden="true"
+    >
+      <i class="mdi mdi-close"></i>
+    </button>
+  </div>
+  <div class="modal-body p-4">
+    <div class="container-fuild">
+      <form [formGroup]="demandForm" (ngSubmit)="onSaveDemand()">
+        <div class="container-fuild">
+          <div class="row">
+            <div class="col-lg-12">
+              <div class="mb-3">
+                <h4 class="header-title">Amount Due *</h4>
+                <input
+                  class="form-control"
+                  placeholder="Enter Amount Due"
+                  formControlName="AmountDue"
+                  type="number"
+                  min="1"
+                  (keypress)="valid($event)"
+                  [ngClass]="{
+                    'is-invalid': submited && a.AmountDue.errors
+                  }"
+                />
+                <div
+                  *ngIf="submited && a.AmountDue.errors"
+                  class="invalid-feedback"
+                >
+                  <div *ngIf="submited && a.AmountDue.errors.required">
+                    Amount Due is Required
+                  </div>
+                  <div *ngIf="submited && a.AmountDue.errors.min">
+                    Amount Due cannot be null or 0
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12">
+              <div class="mb-3">
+                <h4 class="header-title">Amount Due Date *</h4>
+                <input
+                  class="form-control"
+                  placeholder="Enter DueDate"
+                  formControlName="DueDate"
+                  type="date"
+                  (keypress)="callback()"
+                  [ngClass]="{
+                    'is-invalid': submited && a.DueDate.errors
+                  }"
+                />
+                <div
+                  *ngIf="submited && a.DueDate.errors"
+                  class="invalid-feedback"
+                >
+                  <div *ngIf="submited && a.DueDate.errors.required">
+                    Due Date is Required
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-lg-12 mb-2">
+              <h4 class="header-title">File Upload *</h4>
+              <p class="text-muted font-13 m-b-30"></p>
+              <!-- file upload -->
+              <file-upload
+                class="dropzone"
+                multiple="false"
+                isAnimationDisabled="true"
+                listVisible="true"
+                zoomText="zoomOut"
+                #Files
+                accept="image/gif,image/png,image/jpeg,application/pdf"
+                type="file"
+                maxsize="20mb"
+                (ngModelChange)="onchange($event)"
+                [ngClass]="{
+                  'is-invalid': submited && a.uploadfile.errors
+                }"
+                formControlName="uploadfile"
+              ></file-upload>
+              <div
+                *ngIf="submited && a.uploadfile.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="a.uploadfile.errors.sizeRange">
+                  File size is exceed 20 Mb Limit
+                </div>
+                <div *ngIf="a.uploadfile.errors.required">Please Add file</div>
+              </div>
+            </div>
+
+            <div class="col-md-12 mb-3">
+              <h4 class="header-title">File Name *</h4>
+              <input
+                class="form-control"
+                id="example-input"
+                placeholder="Enter File Name"
+                formControlName="FileName"
+                maxlength="25"
+                [ngClass]="{
+                  'is-invalid': submited && a.FileName.errors
+                }"
+              />
+              <div
+                *ngIf="submited && a.FileName.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="a.FileName.errors.required">
+                  File Name is Required
+                </div>
+                <div *ngIf="a.FileName.errors.pattern">
+                  Only alphanumeric characters allowed
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-12 mb-3">
+              <h4 class="header-title">File Description *</h4>
+
+              <textarea
+                class="form-control"
+                id="example-textarea"
+                rows="3"
+                placeholder="Enter File Description"
+                formControlName="Description"
+                maxlength="55"
+                [ngClass]="{
+                  'is-invalid': submited && a.Description.errors
+                }"
+              ></textarea>
+              <div
+                *ngIf="submited && a.Description.errors"
+                class="invalid-feedback"
+              >
+                <div *ngIf="a.Description.errors.required">
+                  File Description is Required
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="card-disabled" *ngIf="isLoading">
+            <div class="card-portlets-loader"></div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </div>
+  <div class="modal-footer">
+    <button
+      type="button"
+      class="btn btn-secondary waves-effect"
+      (click)="modal('Cross click')"
+    >
+      Close
+    </button>
+    <button
+      type="button"
+      class="btn btn-primary waves-effect waves-light"
+      (click)="onSaveDemand()"
+    >
+      Add
+    </button>
+  </div>
+</ng-template>
